v0.0.5

* [BGBUILD-131] Check if OS is supported before executing the plugin

v0.0.4

* Version bump to tag repository

v0.0.3

* [BGBUILD-86] EBS plugin should inform that it can be run only on EC2
* [BGBUILD-85] Adjust BoxGrinder spec files for review

v0.0.2

* [BGBUILD-70] Enable Ephemeral Storage on EBS Images
* [BGBUILD-61] EBS availability_zone should be defaulted to current running instance availability zone
* [BGBUILD-67] Add Fedora 14 support for S3 delivery plugin and EBS delivery plugin

v0.0.1

* [BGBUILD-3] Create EBS delivery plugin
